arrumando a cor do container login

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -14,7 +14,8 @@
     <title>Login ao Finder</title>
 </head>
 
-<body>
+<body class="login-body">
+
     <header class="headerContainer">
         <nav class="headerNavBar">
             <a href="index.html">
@@ -35,6 +36,7 @@
             <li class="navList_item"><a href="src/pages/about.html" target="_blank">Sobre</a></li>
         </ul>
     </header>
+  
 
     <main>
     <div class="containerLogin">
@@ -73,9 +75,6 @@
                     </ul>
                 </div>
 
-                <p class="descriptionLogin description-second">
-                    Ou use seu e-mail para se registrar:
-                </p>
 
                 <form class="formLogin">
                     <label class="labelLogin-input">
