--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -155,6 +155,37 @@
         <!--second content-->
     </div>
 
+    <div class="containerLoginMobile">
+        <h2>Login</h2>
+        <form class="formLogin">
+            <label>
+                <input type="email" placeholder="Email" />
+            </label>
+            <label>
+                <input type="password" placeholder="Senha" />
+            </label>
+            <button class="btnLogin">Entrar</button>
+        </form>
+        <p>Ainda não tem conta? <a href="#">Cadastre-se</a></p>
+    </div>
+
+    <div class="containerCadastroMobile">
+        <h2>Cadastro</h2>
+        <form class="formCadastro">
+            <label>
+                <input type="text" placeholder="Nome" />
+            </label>
+            <label>
+                <input type="email" placeholder="Email" />
+            </label>
+            <label>
+                <input type="password" placeholder="Senha" />
+            </label>
+            <button class="btnCadastro">Cadastrar</button>
+        </form>
+        <p>Já tem uma conta? <a href="login.html">Faça login</a></p>
+    </div>
+
 </main>
 
     <footer class="rodape">
