Adicionando link para tela de login

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -22,9 +22,9 @@
                 <div class="navlogo"></div>
             </a>
             <ul class="navList">
-                <li class="navList_item active"><a href="#home">Inicio</a></li>
-                <li class="navList_item"><a href="#productss">Produtos</a></li>
-                <li class="navList_item" ><a href="src/pages/about.html" target="_blank">Sobre</a></li>
+                <li class="navList_item active"><a href="/index.html">Inicio</a></li>
+                <li class="navList_item"><a href="/src/pages/products.html">Produtos</a></li>
+                <li class="navList_item" ><a href="/src/pages/login.html" >Login</a></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
