--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -25,6 +25,7 @@
             <ul class="navList">
                 <li class="navList_item"><a href="/index.html">Inicio</a></li>
                 <li class="navList_item active"><a href="products.html">Produtos</a></li>
+                <li class="navList_item" ><a href="/src/pages/login.html" >Login</a></li>
                 <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
             <button class="btn_Mobile">
