--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <ul class="navList">
                 <li class="navList_item active"><a href="index.html">Inicio</a></li>
                 <li class="navList_item" ><a href="src/pages/products.html" >Produtos</a></li>
+                <li class="navList_item" ><a href="/src/pages/login.html" >Login</a></li>
                 <li class="navList_item"><a href="src/pages/favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
             <button class="btn_Mobile">
