--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -23,8 +23,8 @@
             </a>
             <ul class="navList">
                 <li class="navList_item active"><a href="/index.html">Inicio</a></li>
-                <li class="navList_item"><a href="/src/pages/products.html">Produtos</a></li>
-                <li class="navList_item" ><a href="/src/pages/login.html" >Login</a></li>
+                <li class="navList_item"><a href="../pages/products.html">Produtos</a></li>
+                <li class="navList_item" ><a href="../pages/login.html" >Login</a></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
