--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -6,13 +6,13 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/src/styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://unpkg.com/scrollreveal"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Sobre</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <ul class="navList">
                 <li class="navList_item"><a href="/index.html">Inicio</a></li>
                 <li class="navList_item active"><a href="products.html">Produtos</a></li>
-                <li class="navList_item" ><a href="/src/pages/login.html" >Login</a></li>
+                <li class="navList_item" ><a href="../pages/login.html" >Login</a></li>
                 <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
             <button class="btn_Mobile">
@@ -134,7 +134,7 @@
             
         </div>
     </footer>
-    <script src="/src/scripts/amazon.js"></script>
-    <script src="/src/scripts/btnMobile.js"></script>
+    <script src="../scripts/amazon.js"></script>
+    <script src="../scripts/btnMobile.js"></script>
 </body>
 </html>
